refactor: Major DX improvements with chezmoi best practices
- Reorganize with .chezmoiroot pointing to home/ directory
- Add .chezmoiversion (2.40.0) for version enforcement
- Create .chezmoitemplates/ with shared aliases, path-common, 1password-secrets
- Migrate to native chezmoi 1Password template functions (onepasswordRead)
- Add .chezmoidata.yaml for platform-specific configuration data
- Add run_onchange script for Brewfile package updates
- Add delta configuration for better git diffs (side-by-side, Catppuccin)
- Add Makefile with common chezmoi operations
- Add mise tasks for dotfiles workflow automation
- Add 1Password CLI installation to Linux setup script
- Remove unused fish shell configuration
- Remove yazi/ghostty backup files
- Update README with mermaid decision tree and structure docs
- Consolidate duplicate aliases into shared template

--- a/home/.chezmoiignore
+++ b/home/.chezmoiignore
@@ -1,8 +1,14 @@
 # Files to ignore when applying chezmoi
 README.md
 LICENSE
+Makefile
 .DS_Store
 **/.DS_Store
+
+# Repo metadata (not dotfiles)
+.mise
+.github
+.git
 
 # Secrets - never track these
 .secrets
@@ -22,3 +28,7 @@ LICENSE
 .Trash
 .Spotlight-V100
 .fseventsd
+
+# Backup files
+*.bak
+*-backup
