feat: add yazi CTRL+T television binding and nvim plugins (oil, television)

--- a/home/dot_config/yazi/private_keymap.toml
+++ b/home/dot_config/yazi/private_keymap.toml
@@ -3,6 +3,9 @@
 [mgr]
 
 prepend_keymap = [
+  # Television fuzzy finder (Ctrl+T)
+  { on = [ "<C-t>" ], run = '''shell "tv" --block''', desc = "Open television fuzzy finder" },
+
   # Quick video preview with mpv (press 'v') - COMMENTED OUT to restore visual mode
   # { on = [ "v" ], run = '''shell "mpv --geometry=50%x50% --force-window=immediate --loop '$@'" --orphan''', desc = "Preview video in mpv" },
 
